Update PrepareNoiseBarrierFile.java