@@ -18,7 +18,6 @@ import org.matsim.core.utils.io.IOUtils;
 import picocli.CommandLine;
 
 import java.io.OutputStream;
-import java.net.URL;
 import java.nio.file.Files;
 import java.nio.file.Path;
 
@@ -77,7 +76,7 @@ public class PrepareNoiseBarrierFile implements MATSimAppCommand {
         if (!Files.exists(outputPath.getParent()))
             Files.createDirectories(outputPath.getParent());
 
-        try (OutputStream outputStream = IOUtils.getOutputStream(new URL(outputPath.toString()), false)) {
+        try (OutputStream outputStream = IOUtils.getOutputStream(outputPath.toFile().toURI().toURL(), false)) {
             json.writeGeometryCollection(collector.collect(), outputStream);
         }
 
